--- a/config/voterVisualization_config.json
+++ b/config/voterVisualization_config.json
@@ -15,21 +15,27 @@
     },
     "Blue": {
       "state": { "preference": 1 },
-      "cell_map": [ [1, 1], [1, 2], [1, 3],
-                    [2, 1],         [2, 3],
-                    [3, 1], [3, 2], [3, 3]]
-    },
+      "cell_map":  [
+    [0, 1], [0, 3], [0, 4], [0, 5], [1, 2], [1, 4], [1, 5], [2, 1], [2, 2], [2, 6],
+    [2, 7], [3, 0], [3, 2], [3, 6], [3, 7], [4, 0], [4, 2], [4, 4], [4, 5], [5, 0],
+    [5, 1], [5, 6], [5, 8], [6, 1], [6, 3], [6, 5], [7, 0], [7, 2], [7, 4], [7, 6],
+    [7, 7], [8, 1], [8, 3], [8, 5], [8, 7], [9, 1], [9, 3], [9, 5], [9, 8]]
+    }, 
     "Red": {
       "state": { "preference": 2 },
-      "cell_map": [ [6, 6], [6, 7], [6, 8],
-                    [7, 6],         [7, 8],
-                    [8, 6], [8, 7], [8, 8]]
+      "cell_map": [
+    [0, 0], [0, 2], [1, 0], [1, 1], [1, 3], [1, 6], [2, 0], [2, 3], [2, 4], [2, 5],
+    [3, 1], [3, 4], [3, 5], [4, 1], [4, 3], [4, 6], [5, 2], [5, 5], [6, 0], [6, 2],
+    [6, 4], [6, 7], [7, 1], [7, 3], [7, 5], [7, 8], [8, 2], [8, 4], [8, 6], [8, 9],
+    [9, 0], [9, 2], [9, 4], [9, 6], [9, 7], [9, 9]
+  ]
     }
-  },
+},
+
    "viewer": [
             {
               "colors": [[0, 0, 0], [0, 0, 255], [255, 0, 0]],
-              "breaks": [-1, 0.5, 1.5, 2.5],
+              "breaks": [0, 1, 2, 3],
               "field": "preference"
             }
     ]
