--- a/config/voterVisualization_config.json
+++ b/config/voterVisualization_config.json
@@ -1,41 +1,43 @@
 {
-  "scenario": {
-    "shape": [10, 10],
-    "origin": [0, 0],
-    "wrapped": true
-  },
   "cells": {
     "default": {
       "delay": "transport",
       "model": "voter",
-      "state": { "preference": 0 },
-      "neighborhood": [
-        { "type": "von_neumann", "range": 1 }
-      ]
+      "state": {"preference": 0}
     },
-    "Blue": {
-      "state": { "preference": 1 },
-      "cell_map":  [
-    [0, 1], [0, 3], [0, 4], [0, 5], [1, 2], [1, 4], [1, 5], [2, 1], [2, 2], [2, 6],
-    [2, 7], [3, 0], [3, 2], [3, 6], [3, 7], [4, 0], [4, 2], [4, 4], [4, 5], [5, 0],
-    [5, 1], [5, 6], [5, 8], [6, 1], [6, 3], [6, 5], [7, 0], [7, 2], [7, 4], [7, 6],
-    [7, 7], [8, 1], [8, 3], [8, 5], [8, 7], [9, 1], [9, 3], [9, 5], [9, 8]]
-    }, 
-    "Red": {
-      "state": { "preference": 2 },
-      "cell_map": [
-    [0, 0], [0, 2], [1, 0], [1, 1], [1, 3], [1, 6], [2, 0], [2, 3], [2, 4], [2, 5],
-    [3, 1], [3, 4], [3, 5], [4, 1], [4, 3], [4, 6], [5, 2], [5, 5], [6, 0], [6, 2],
-    [6, 4], [6, 7], [7, 1], [7, 3], [7, 5], [7, 8], [8, 2], [8, 4], [8, 6], [8, 9],
-    [9, 0], [9, 2], [9, 4], [9, 6], [9, 7], [9, 9]
-  ]
-    }
+
+  "cb1": {
+    "state": {"preference": 0},
+    "neighborhood": {"cb1": 1, "cb2": 1, "cb3": 1}
+  },
+  "cb2": {
+    "state": {"preference": 0},
+    "neighborhood": {"cb1": 1, "cb2": 1, "cb3": 1}
+  },
+  "cb3": {
+    "state": {"preference": 0},
+    "neighborhood": {"cb1": 1, "cb2": 1, "cb3": 1}
+  },
+
+
+  "cr1": {
+    "state": {"preference": 1},
+    "neighborhood": {"cr1": 1, "cr2": 1, "cr3": 1}
+  },
+  "cr2": {
+    "state": {"preference": 1},
+    "neighborhood": {"cr1": 1, "cr2": 1, "cr3": 1}
+  },
+  "cr3": {
+    "state": {"preference": 1},
+    "neighborhood": {"cr1": 1, "cr2": 1, "cr3": 1}
+  }
 },
 
    "viewer": [
             {
-              "colors": [[0, 0, 0], [0, 0, 255], [255, 0, 0]],
-              "breaks": [0, 1, 2, 3],
+              "colors": [[0, 0, 255], [255, 0, 0]],
+              "breaks": [0, 1],
               "field": "preference"
             }
     ]
